minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio-tenant-1
spec:
  ingressClassName: nginx
  rules:
  - host: 127.0.0.1
    http:
      paths:
      - path: /minio
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 443

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console-ingress
  namespace: minio-tenant-1
spec:
  ingressClassName: nginx
  rules:
  - host: 127.0.0.1
    http:
      paths:
      - path: /minio-console
        pathType: Prefix
        backend:
          service:
            name: minio-tenant-1-console
            port:
              number: 9443
